# python-project-50

./: .gitignore  Makefile  README.md  file1.json  pyproject.toml  ruff.toml
.github/workflows/: python-ci.yml
gendiff/: __init__.py  cli.py  diff.py  diff_tree.py  parser.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
tests/: test_diff_tree.py  test_formatters.py  test_gendiff.py  test_parsers.py
tests/test_data/: expected.txt  file1_nested.yml  file2.json
